central color export

--- a/install
+++ b/install
@@ -1,11 +1,11 @@
 #!/usr/bin/env bash
 
-RED="\033[31m"
-GREEN="\033[32m"
-BLUE="\033[34m"
-PURPLE="\033[35m"
-CYAN="\033[36m"
-END="\033[0m"
+export RED="\033[31m"
+export GREEN="\033[32m"
+export BLUE="\033[34m"
+export PURPLE="\033[35m"
+export CYAN="\033[36m"
+export END="\033[0m"
 
 clear
 
