--- a/install
+++ b/install
@@ -5,11 +5,7 @@ eval $(./scripts/colors | sed 's/\(.*\)=\(.*\)/export \1="\2"/g')
 clear
 
 echo
-echo '             _                    #    ▐▄▄▄.▄▄ ·      ▄ .▄            ▄ •▄ .▄▄ ·                '
-echo '  __  ____ _| |__   __ _ _   _    #     ·██▐█ ▀.     ██▪▐█▪     ▪     █▌▄▌▪▐█ ▀.                '
-echo '  \ \/ / _` | "_ \ / _` | | | |   #   ▪▄ ██▄▀▀▀█▄    ██▀▐█ ▄█▀▄  ▄█▀▄ ▐▀▀▄·▄▀▀▀█▄               '
-echo "   >  < (_| | | | | (_| | |_| |   #   ▐▌▐█▌▐█▄▪▐█    ██▌▐▀▐█▌.▐▌▐█▌.▐▌▐█.█▌▐█▄▪▐█               "
-echo "  /_/\_\__,_|_| |_|\__,_|\__,_|   #    ▀▀▀• ▀▀▀▀     ▀▀▀ · ▀█▄▀▪ ▀█▄▀▪·▀  ▀ ▀▀▀▀                "
+./scripts/banner
 echo
                      
 echo -e "${GREEN}Xahau(d) - JS Hooks ALPHA TOOLKIT${END}"
